{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 117,
  "lineage": "0dd57414-4953-f727-cc84-8aeea075e5aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0573b70afecda915d",
            "arn": "arn:aws:ec2:us-west-1:098839885268:instance/i-0011872eff253a551",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0011872eff253a551",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063ab0a78e9bf00a5",
            "private_dns": "ip-10-10-63-124.us-west-1.compute.internal",
            "private_ip": "10.10.63.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067d53e965628ff89",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076b71c24c123645f",
            "tags": {
              "Name": "Jumper"
            },
            "tags_all": {
              "Name": "Jumper"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-006616013733fc87c"
            ]
          },
          "dependencies": [
            "aws_route_table.pubRT",
            "aws_security_group.bastionHostSG",
            "aws_subnet.pubSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0573b70afecda915d",
            "arn": "arn:aws:ec2:us-west-1:098839885268:instance/i-003f946c36880c62d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003f946c36880c62d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f71572e085ee1b70",
            "private_dns": "ip-10-10-94-20.us-west-1.compute.internal",
            "private_ip": "10.10.94.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0574a0689f3b8a6ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a84478c0b26137f8",
            "tags": {
              "Name": "Private Instance"
            },
            "tags_all": {
              "Name": "Private Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0101eda4035a5754c"
            ]
          },
          "dependencies": [
            "aws_route_table.privRT",
            "aws_security_group.privInstSG",
            "aws_subnet.privSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:route-table/rtb-0570c2ff7be25d6cc",
            "id": "rtb-0570c2ff7be25d6cc",
            "owner_id": "098839885268",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.privSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:route-table/rtb-05fc5217cec168129",
            "id": "rtb-05fc5217cec168129",
            "owner_id": "098839885268",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pubSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privRTToSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0760f1e7e7543a496",
            "route_table_id": "rtb-0570c2ff7be25d6cc",
            "subnet_id": "subnet-0a84478c0b26137f8"
          },
          "dependencies": [
            "aws_route_table.privRT",
            "aws_subnet.privSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRTToSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c99541e477c35dd",
            "route_table_id": "rtb-05fc5217cec168129",
            "subnet_id": "subnet-076b71c24c123645f"
          },
          "dependencies": [
            "aws_route_table.pubRT",
            "aws_subnet.pubSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionHostSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:security-group/sg-006616013733fc87c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006616013733fc87c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220215132041414900000002",
            "name_prefix": "terraform-",
            "owner_id": "098839885268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Host Security Group"
            },
            "tags_all": {
              "Name": "Bastion Host Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.pubRT",
            "aws_subnet.pubSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privInstSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:security-group/sg-0101eda4035a5754c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0101eda4035a5754c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220215132041413100000001",
            "name_prefix": "terraform-",
            "owner_id": "098839885268",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Instance Security Group"
            },
            "tags_all": {
              "Name": "Private Instance Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.privRT",
            "aws_subnet.privSub",
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "privInstSGRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3332438251",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-006616013733fc87c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastionHostSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:subnet/subnet-0a84478c0b26137f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a84478c0b26137f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098839885268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "dependencies": [
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:subnet/subnet-076b71c24c123645f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076b71c24c123645f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098839885268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0b9eca873c23f7948"
          },
          "dependencies": [
            "aws_vpc.ourVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ourVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:098839885268:vpc/vpc-0b9eca873c23f7948",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-073df35ee8c404cc8",
            "default_route_table_id": "rtb-0dd6c1a0cc6042b74",
            "default_security_group_id": "sg-01c67dca827a34f40",
            "dhcp_options_id": "dopt-0bb3dbe536f639ee9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b9eca873c23f7948",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd6c1a0cc6042b74",
            "owner_id": "098839885268",
            "tags": {
              "Name": "The Network"
            },
            "tags_all": {
              "Name": "The Network"
            }
          }
        }
      ]
    }
  ]
}